--- a/style.css
+++ b/style.css
@@ -73,13 +73,15 @@ nav {
 
 .nav-link {
   text-transform: uppercase;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
+  font-weight: 700;
   letter-spacing: 2px;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.966);
   transition: all 0.3s;
   margin-left: 2rem;
   text-decoration: none;
   position: relative;
+  display: inline-block;
 }
 
 .nav-link::after {
